@startuml MER_TeacherMakers

' ==================================================
' MER - TeacherMakers
' Plataforma de Formação em Cultura Maker,
' Pensamento Computacional e Robótica para Professores
' ==================================================

!theme plain
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam roundcorner 8
skinparam shadowing false
hide circle
hide empty methods

' ==================================================
' ENTIDADES
' ==================================================

entity USUARIO {
  * id : INTEGER <<PK>>
  --
  * nome : VARCHAR(150) <<NOT NULL>>
  * email : VARCHAR(200) <<UNIQUE, NOT NULL>>
  * senha : VARCHAR(255) <<NOT NULL>>
  * nivel_ensino : ENUM <<NOT NULL>>
  data_cadastro : DATETIME
  onboarding_concluido : BOOLEAN
}

entity MODULO {
  * id : INTEGER <<PK>>
  --
  * titulo : VARCHAR(100) <<NOT NULL>>
  descricao : TEXT
  * cor : VARCHAR(7) <<NOT NULL>>
  * ordem : INTEGER <<UNIQUE, NOT NULL>>
}

entity AULA {
  * id : INTEGER <<PK>>
  --
  * modulo_id : INTEGER <<FK, NOT NULL>>
  * titulo : VARCHAR(150) <<NOT NULL>>
  subtitulo : VARCHAR(255)
  descricao : TEXT
  * tipo : ENUM <<NOT NULL>>
  url_video : VARCHAR(500)
  duracao_min : INTEGER
  * ordem : INTEGER <<NOT NULL>>
}

entity QUIZ {
  * id : INTEGER <<PK>>
  --
  * aula_id : INTEGER <<FK, UNIQUE, NOT NULL>>
}

entity QUESTAO {
  * id : INTEGER <<PK>>
  --
  * quiz_id : INTEGER <<FK, NOT NULL>>
  * pergunta : TEXT <<NOT NULL>>
  * ordem : INTEGER <<NOT NULL>>
}

entity OPCAO {
  * id : INTEGER <<PK>>
  --
  * questoes_id : INTEGER <<FK, NOT NULL>>
  * texto : TEXT <<NOT NULL>>
  * correta : BOOLEAN <<NOT NULL>>
  * ordem : INTEGER <<NOT NULL>>
}

entity PRATICA {
  * id : INTEGER <<PK>>
  --
  * modulo_id : INTEGER <<FK, NOT NULL>>
  aula_id : INTEGER <<FK, UNIQUE>>
  * tipo : ENUM <<NOT NULL>>         ' regular | integradora
  * titulo : VARCHAR(150) <<NOT NULL>>
  subtitulo : VARCHAR(255)
  icone : VARCHAR(50)
}

entity ETAPA_PRATICA {
  * id : INTEGER <<PK>>
  --
  * pratica_id : INTEGER <<FK, NOT NULL>>
  * titulo : VARCHAR(150) <<NOT NULL>>
  * texto_instrucao : TEXT <<NOT NULL>>
  instrucao_professor : VARCHAR(255)
  * ordem : INTEGER <<NOT NULL>>
}

entity PROGRESSO_MODULO {
  * id : INTEGER <<PK>>
  --
  * usuario_id : INTEGER <<FK, NOT NULL>>
  * modulo_id : INTEGER <<FK, NOT NULL>>
  * status : ENUM <<NOT NULL>>
  percentual : INTEGER
  data_inicio : DATETIME
  data_conclusao : DATETIME
  --
  UNIQUE(usuario_id, modulo_id)
}

entity PROGRESSO_AULA {
  * id : INTEGER <<PK>>
  --
  * usuario_id : INTEGER <<FK, NOT NULL>>
  * aula_id : INTEGER <<FK, NOT NULL>>
  * status : ENUM <<NOT NULL>>
  video_assistido : BOOLEAN
  data_inicio : DATETIME
  data_conclusao : DATETIME
  minutos_estudo : INTEGER
  --
  UNIQUE(usuario_id, aula_id)
}

entity RESPOSTA_QUIZ {
  * id : INTEGER <<PK>>
  --
  * usuario_id : INTEGER <<FK, NOT NULL>>
  * questoes_id : INTEGER <<FK, NOT NULL>>
  * opcao_id : INTEGER <<FK, NOT NULL>>
  * acertou : BOOLEAN <<NOT NULL>>
  tentativas : INTEGER
  data_resposta : DATETIME
  --
  UNIQUE(usuario_id, questoes_id)
}

entity PROGRESSO_PRATICA {
  * id : INTEGER <<PK>>
  --
  * usuario_id : INTEGER <<FK, NOT NULL>>
  * pratica_id : INTEGER <<FK, NOT NULL>>
  * status : ENUM <<NOT NULL>>
  etapa_atual : INTEGER
  data_inicio : DATETIME
  data_conclusao : DATETIME
  --
  UNIQUE(usuario_id, pratica_id)
}

entity EVIDENCIA {
  * id : INTEGER <<PK>>
  --
  * progresso_pratica_id : INTEGER <<FK, NOT NULL>>
  * diario_bordo : TEXT <<NOT NULL>>
  * foto_url : VARCHAR(500) <<NOT NULL>>
  data_envio : DATETIME
}

entity CERTIFICADO {
  * id : INTEGER <<PK>>
  --
  * usuario_id : INTEGER <<FK, UNIQUE, NOT NULL>>
  * codigo_validacao : VARCHAR(36) <<UNIQUE, NOT NULL>>
  data_emissao : DATETIME
  * carga_horaria : INTEGER <<NOT NULL>>
}

' ==================================================
' RELACIONAMENTOS
' ==================================================

' --- Usuário e seus progressos ---
USUARIO ||--o{ PROGRESSO_MODULO : "possui"
USUARIO ||--o{ PROGRESSO_AULA : "rastreia"
USUARIO ||--o{ RESPOSTA_QUIZ : "responde"
USUARIO ||--o{ PROGRESSO_PRATICA : "executa"
USUARIO ||--o| CERTIFICADO : "recebe"   ' ← corrigido: 1 : 0..1

' --- Estrutura pedagógica ---
MODULO ||--o{ AULA : "contém"
AULA ||--o| QUIZ : "pode ter"
AULA ||--o| PRATICA : "pode ter"
MODULO ||--o{ PRATICA : "possui"
QUIZ ||--o{ QUESTAO : "composto por"
QUESTAO ||--o{ OPCAO : "oferece"
PRATICA ||--o{ ETAPA_PRATICA : "dividida em"

' --- Evidências ---
PROGRESSO_PRATICA ||--o{ EVIDENCIA : "documenta"

' --- FKs das tabelas de progresso ---
PROGRESSO_MODULO }o--|| MODULO : "referencia"
PROGRESSO_AULA }o--|| AULA : "referencia"
RESPOSTA_QUIZ }o--|| QUESTAO : "referencia"
RESPOSTA_QUIZ }o--|| OPCAO : "referencia"
PROGRESSO_PRATICA }o--|| PRATICA : "referencia"

@enduml